--- a/pms/views/precheckin_portal_templates.xml
+++ b/pms/views/precheckin_portal_templates.xml
@@ -69,24 +69,28 @@
                                     class="col-form-label"
                                     for="gender"
                                 >Gender</label>
-                                <input
-                                    type="text"
-                                    name="gender"
-                                    t-attf-class="form-control"
-                                    t-att-value="gender or checkin_partner.gender"
-                                />
+                                <select class="form-control" id="gender" name="gender">
+                                    <option value="female">Female</option>
+                                    <option value="male">Male</option>
+                                    <option value="other">Other</option>
+                                </select>
                             </div>
                             <div t-attf-class="form-group col-xl-6">
                                 <label
                                     class="col-form-label"
                                     for="document_type"
                                 >Doc. type</label>
-                                <input
-                                    type="text"
+                                <select
+                                    class="form-control"
+                                    id="doc_type_id"
                                     name="document_type"
-                                    t-attf-class="form-control"
-                                    t-att-value="doc_type or checkin_partner.document_type"
-                                />
+                                >
+                                    <option value="D">DNI</option>
+                                    <option value="C">Driving License</option>
+                                    <option value="I">Identification Document</option>
+                                    <option value="N">Spanish residence permit</option>
+                                    <option value="X">European residence permit</option>
+                               </select>
                             </div>
                             <div t-attf-class="form-group col-xl-6">
                                 <label
